Add profiles for native image