@@ -159,7 +159,7 @@
 
     <profiles>
         <profile>
-            <id>native</id>
+            <id>native-instrumented</id>
             <build>
                 <plugins>
                     <plugin>
@@ -175,30 +175,41 @@
                                 </goals>
                                 <phase>package</phase>
                             </execution>
+                        </executions>
+                        <configuration>
+                            <buildArgs>
+                                <buildArg>--pgo-instrument</buildArg>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>native-optimized</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native.maven.plugin.version}</version>
+                        <extensions>true</extensions>
+                        <executions>
                             <execution>
-                                <id>test-native</id>
+                                <id>build-native</id>
                                 <goals>
-                                    <goal>test</goal>
+                                    <goal>build</goal>
                                 </goals>
-                                <phase>test</phase>
+                                <phase>package</phase>
                             </execution>
                         </executions>
                         <configuration>
                             <buildArgs>
-                                <buildArg>-H:Log=registerResource:3 --enable-preview</buildArg>
+                                <buildArg>--gc=G1</buildArg>
+                                <buildArg>--pgo=default.iprof</buildArg>
+                                <buildArg>-march=native</buildArg>
                             </buildArgs>
-<!--
-                            <fallback>false</fallback>
-                            <buildArgs>
-                                <arg>-H:DashboardDump=rinha-backend2024-q1-javaslow -H:+DashboardAll</arg>
-                            </buildArgs>
-                            <agent>
-                                <enabled>true</enabled>
-                                <options>
-                                    <option>experimental-class-loader-support</option>
-                                </options>
-                            </agent>
--->
                         </configuration>
                     </plugin>
                 </plugins>
